--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -6,6 +6,9 @@
     <head>
         <title>Qwikipedia: {% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
     <body>
@@ -20,7 +23,7 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href ="{% url 'create' %}">Create New Page</a>
                 </div>
                 <div>
                     Random Page
@@ -29,8 +32,36 @@
                 {% endblock %}
             </div>
             <div class="main col-lg-10 col-md-9">
+                <!--Flashed Messages -->
+                {% if messages %}
+                  <div class="messages">
+                  {% for message in messages %}
+                    <!-- Warning Messages-->
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                      <strong>{{ message}}</strong>
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                      </button>
+                     </div>
+                    {% endif %}
+                    <!-- Success Messages -->
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                      <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message}}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                      </button>
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+                  </div>
+                {% endif %}
+
+                <!-- Main Page Body -->
                 {% block body %}
                 {% endblock %}
+
             </div>
         </div>
 
