--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,20 +1,20 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Create New Page
+    Edit Page {{ title }}
 {% endblock %}
 
 {% block body %}
 
-  <h1>Create a new Qwikipedia Page:</h1>
+  <h1>Editing Qwikipedia Page "{{ title }}"</h1>
 
-  <p>Use the form below to create a new Qwikipedia Page.</p>
+  <p>Use the form below to edit the Qwikipedia page for "{{ title }}".</p>
   <p>Please note that Qwikipedia uses <a href="https://docs.github.com/en/github/writing-on-github/basic-writing-and-formatting-syntax">Github Markdown</a> to style its pages, which is converted to HTML when entries are requested by a user.</p>
 
-  <form action="{% url 'create' %}" method="post">
+  <form action="{% url 'edit' title=title %}" method="post">
     {% csrf_token %}
-    {{ create_form }}
-    <input class= "btn btn-primary" type="submit" value="Submit">
+    {{ edit_form }}
+    <input class="btn btn-primary" type="submit" value="Submit">
   </form>
 
 {% endblock %}
