Random Page function now working

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -26,7 +26,7 @@
                     <a href ="{% url 'create' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href ="{% url 'random_title' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
