--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -10,10 +10,17 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'encyclopedia/favicons/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'encyclopedia/favicons/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'encyclopedia/favicons//favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static 'encyclopedia/favicons//site.webmanifest' %}">
+
+
     </head>
     <body>
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
+                <img class="logo" src="{% static 'encyclopedia/logo.png' %}">
                 <h2>Qwikipedia</h2>
                 <form action="{% url 'search' %}" method="post">
                     {% csrf_token %}
